--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        <h1 class="name">Anibal Jiménez</h1>
        <h2 class="subtitle"><i> Front-End Developer </i></h2>
         </div>
-        
+
         <hr>
         <div class="descri"><p> Olá pessoal meu nome é Anibal Jimenez, sou venezuelano, junto com minha esposa chegamos ao Brasil no ano 2018,com muita vontade de crescer tanto pessoal como professionalmente, 
              atualmente meu pais afronta uma crisis politica que tem afetado muito nossos sonhos professionais e nossa saude, essa mesma crisis me impulsou a sair e buscar novos horizontes neste pais. Desde que cheguei, 
@@ -57,4 +57,13 @@
              só que fiquei selecionado só na segunda tentativa. Hoje posso dizer que sou Professional em formação na área da TI, com muito caminho por recorrer mais com uma vontade grande de aprender cada dia mais e assim ser um exelente professional.
             </p>
         </div>
+        </section>
+
+        <!-- formacion -->  
+       <section id="formation" class="formacion">
+          <h2 class="titulo2">Formação</h2>
+             <p class="title">Curso Introdução á Linguagem html</p>
+             <p class="uni"> Alfahelix EScola de Computação </p><br>
+             <p class="title">Desenvolvedor Front-End</p>
+             <p class="uni">Toti Diversidade </p></br>
         </section>
