--- a/index.html
+++ b/index.html
@@ -67,3 +67,12 @@
              <p class="title">Desenvolvedor Front-End</p>
              <p class="uni">Toti Diversidade </p></br>
         </section>
+
+        <section id="obj" class="objetivo">
+            <h2 class="titulo2"> Objetivo</h2>
+            <div class="descri">
+            <p>Tenho como objetivo me tornar um professional na minha area de TI, crescer cada dia neste ambito é o meu foco, 
+                poder ajudar a quem precise e aportar boas ideias no mercado de trabalho. Ter uma estabilidade pessoal laboral e financeira 
+                para mim e minha familia é uma das metas que mais anhelo agradeço muito a TOTI por me dar a oportunidad de iniciar o caminho para alcanzar os meus objetivos.
+            </p></div>
+        </section>
