--- a/index.html
+++ b/index.html
@@ -76,3 +76,30 @@
                 para mim e minha familia é uma das metas que mais anhelo agradeço muito a TOTI por me dar a oportunidad de iniciar o caminho para alcanzar os meus objetivos.
             </p></div>
         </section>
+
+        <!-- cards -->  
+       <section id="prj" class="project">
+         <h2 class="titulo3">Projetos</h2>
+
+            <article>
+                <div class="cardp1">
+                    <img src="img/git.png" width="150px" height="150px" alt="exercicios de git">
+                    <h3>Aulas de Git</h3>
+                    <p>exercicios de git feitos dentro das aulas gravadas</p>  
+                    <a href="https://github.com/anibaljm/Curso_Git">
+                        <button class="primario">
+                            <span>REPOSITÓRIO</span>
+                        </button>
+                    </a>
+                </div>
+                
+                <div class="cardp2"> 
+                    <img src="img/strogonoff.jpeg" width="150px" height="150px" alt="strogonoff de frango">
+                    <h3>Strogonoff de Frango</h3>
+                    <p>Receita de strogonoff feita só com html</p>  
+                    <a href="https://github.com/anibaljm/exercicio_html">
+                        <button class="primario">REPOSITÓRIO</button>
+                    </a>
+                </div>
+            </article>
+        </section>
