Modificação Portfolio e add API e Form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                <li> <a href="#sobremim" class= "item"> APRESENTAÇÃO </a></li>
                <li> <a href="#formation" class= "item"> FORMAÇÃO </a></li>
                <li> <a href="#obj" class="item"> OBJETIVO </a></li>
-               <li> <a href="#prj" class= "item"> PROJETOS </li></a>
+               <li> <a href="#prj" class= "item"> REPOSITORIOS </li></a>
                <li> <a href="#contacto" class= "item"> CONTATO </a></li>
              </ul>
              </nav>
@@ -81,7 +81,7 @@
         </section>
 
         <!-- API -->  
-       <section class="API">
+       <section id="prj" class="API">
             <br>       
             <h2>Repositorios GITHUB</h2>
             <div id="api"></div>
